--- a/src/app/components/article-list/article-list.component.scss
+++ b/src/app/components/article-list/article-list.component.scss
@@ -32,6 +32,7 @@ article
         .content
         {
             margin: 0;
+            word-break: break-word;
         }
 
         .content
